--- a/index.html
+++ b/index.html
@@ -27,66 +27,79 @@
   <body class="font-lexend">
     <div>
       <!-- navbar section -->
-      <nav class="bg-[#F9F7F3] sticky">
-        <div class="w-10/12 h-auto mx-auto">
-          <div
-            class="text-center md:flex md:justify-between items-center py-8 md:py-6"
-          >
-            <div><button class="btn bg-[#B4F461]">Blog</button></div>
-            <div class="flex justify-center items-center sm:mb-4">
-              <img src="assets/logo.png" alt="logo" />
-              <h3 class="ml-4">Donate Bangladesh</h3>
-            </div>
-            <div class="flex items-center justify-center sm:mt-2">
-              <img class="mr-2" src="assets/coin.png" alt="coin" />
-              <span class="mr-2">5500</span> BDT
+       <div class="border border-b shadow-md sticky top-0 z-50 bg-[#F9F7F3]/80 backdrop-blur-sm">
+        <nav class="bg-[#F9F7F3]">
+          <div class="w-10/12 h-auto mx-auto">
+            <div class="text-center md:flex md:justify-between items-center py-8 md:py-6">
+              <div><button class="btn bg-[#B4F461]" onclick="navigateToBlog()">Blog</button></div>
+              <div class="flex justify-center items-center sm:mb-4">
+                <img src="assets/logo.png" alt="logo" />
+                <h3 class="ml-4">Donate Bangladesh</h3>
+              </div>
+              <div class="flex items-center justify-center sm:mt-2">
+                <img class="mr-2" src="assets/coin.png" alt="coin" />
+                <span class="mr-2">5500</span> BDT
+              </div>
             </div>
           </div>
+        </nav>
+        <div>
+          <div class="w-10/12 h-auto mx-auto my-8 text-center">
+            <button class="btn bg-[#B4F461]">Donation</button>
+            <button class="btn ml-3">History</button>
+          </div>
         </div>
-      </nav>
+       </div>
       <!-- main section -->
-      <section>
-        <div class="w-10/12 h-auto mx-auto my-8">
+      <section class="z-10">
+        <div class="w-10/12 h-auto mx-auto my-12">
           <div>
-            <div class="flex justify-center items-center py-6">
-              <button class="btn bg-[#B4F461]">Donation</button>
-              <button class="btn ml-3">History</button>
-            </div>
             <!-- card section -->
-            <div class="card lg:card-side bg-base-100 shadow-xl p-6 mb-6">
-              <img width="422px" height="200px" src="assets/noakhali.png" alt="noakhali" />
-              <div class="card-body">
-                <button class="btn w-32 h-auto"><img src="assets/coin.png" alt="coin"><span>0</span> BDT</button>
-                <h2 class="card-title">Donate for Flood at Noakhali, Bangladesh</h2>
-                <p>Natural disasters remind us of our shared humanity. Recently, the picturesque region of Noakhali in Bangladesh has been struck by devastating floods, leaving thousands of families homeless and struggling to survive. As we witness their plight, we have a chance to make a meaningful difference..</p>
-                <input class="outline-none border border-solid rounded-md p-2 mb-2" type="number" placeholder="write down amount" id="">
-                  <button class="btn bg-[#B4F461] mt-2">Donate Now</button>
+            <div>
+              <div class="card lg:card-side bg-base-100 shadow-xl p-6 mb-6 flex flex-col lg:flex-row items-center lg:items-start">
+                  <img class="w-full sm:w-auto mx-auto mb-4 lg:mb-0" src="assets/noakhali.png" alt="noakhali" />
+                <div class="card-body">
+                  <button class="btn w-32 h-auto"><img src="assets/coin.png" alt="coin"><span>0</span> BDT</button>
+                  <h2 class="card-title">Donate for Flood at Noakhali, Bangladesh</h2>
+                  <p>Natural disasters remind us of our shared humanity. Recently, the picturesque region of Noakhali in Bangladesh has been struck by devastating floods, leaving thousands of families homeless and struggling to survive. As we witness their plight, we have a chance to make a meaningful difference..</p>
+                  <input class="outline-none border border-solid rounded-md p-2 mb-2" type="number" placeholder="write down amount" id="">
+                    <button class="btn bg-[#B4F461] mt-2">Donate Now</button>
+                </div>
+              </div>
+              <div class="card lg:card-side bg-base-100 shadow-xl p-6 mb-6 flex flex-col lg:flex-row items-center lg:items-start">
+                  <img class="w-full sm:w-auto mx-auto mb-4 lg:mb-0" src="assets/feni.png" alt="feni" />
+                <div class="card-body">
+                  <button class="btn w-32 h-auto"><img src="assets/coin.png" alt="coin"><span>0</span> BDT</button>
+                  <h2 class="card-title">Donate for Flood Relief in Feni,Bangladesh</h2>
+                  <p>Continuous torrential rains have caused rivers in Feni to overflow, inundating villages, towns, and farmlands. Thousands of families are now homeless, with limited access to food, clean water, and medical supplies. Schools and markets are closed, livelihoods are disrupted, and recovery seems like a distant dream for many.</p>
+                  <input class="outline-none border border-solid rounded-md p-2 mb-2" type="number" placeholder="write down amount" id="">
+                    <button class="btn bg-[#B4F461] mt-2">Donate Now</button>
+                </div>
+              </div>
+              <div class="card lg:card-side bg-base-100 shadow-xl p-6 mb-3 flex flex-col lg:flex-row items-center lg:items-start">
+                <img class="w-full sm:w-auto mx-auto mb-4 lg:mb-0" src="assets/quota-protest.png" alt="noakhali" />
+                <div class="card-body">
+                  <button class="btn w-32 h-auto"><img src="assets/coin.png" alt="coin"><span>0</span> BDT</button>
+                  <h2 class="card-title">Aid for Injured in the Quota Movement</h2>
+                  <p>The Quota Reform Movement began as a call for equity in government job recruitment, demanding a reduction in the quota system's disproportionate allocation. The movement, largely peaceful, met with violent crackdowns, leaving many protesters injured and in need of medical assistance.
+                    These individuals, many of them students, sacrificed their safety for the dream of a more equitable future. It’s our responsibility to ensure they don’t bear the aftermath alone</p>
+                  <input class="outline-none border border-solid rounded-md p-2 mb-2" type="number" placeholder="write down amount" id="">
+                    <button class="btn bg-[#B4F461] mt-2">Donate Now</button>
+                </div>
               </div>
             </div>
-            <div class="card lg:card-side bg-base-100 shadow-xl p-6 mb-6">
-              <img width="422px" height="200px" src="assets/feni.png" alt="feni" />
-              <div class="card-body">
-                <button class="btn w-32 h-auto"><img src="assets/coin.png" alt="coin"><span>0</span> BDT</button>
-                <h2 class="card-title">Donate for Flood Relief in Feni,Bangladesh</h2>
-                <p>Continuous torrential rains have caused rivers in Feni to overflow, inundating villages, towns, and farmlands. Thousands of families are now homeless, with limited access to food, clean water, and medical supplies. Schools and markets are closed, livelihoods are disrupted, and recovery seems like a distant dream for many.</p>
-                <input class="outline-none border border-solid rounded-md p-2 mb-2" type="number" placeholder="write down amount" id="">
-                  <button class="btn bg-[#B4F461] mt-2">Donate Now</button>
+            <!-- History section -->
+             <div>
+              <div>
+                
               </div>
-            </div>
-            <div class="card lg:card-side bg-base-100 shadow-xl p-6 mb-3">
-              <img width="422px" height="200px" src="assets/quota-protest.png" alt="noakhali" />
-              <div class="card-body">
-                <button class="btn w-32 h-auto"><img src="assets/coin.png" alt="coin"><span>0</span> BDT</button>
-                <h2 class="card-title">Aid for Injured in the Quota Movement</h2>
-                <p>The Quota Reform Movement began as a call for equity in government job recruitment, demanding a reduction in the quota system's disproportionate allocation. The movement, largely peaceful, met with violent crackdowns, leaving many protesters injured and in need of medical assistance.
-                  These individuals, many of them students, sacrificed their safety for the dream of a more equitable future. It’s our responsibility to ensure they don’t bear the aftermath alone</p>
-                <input class="outline-none border border-solid rounded-md p-2 mb-2" type="number" placeholder="write down amount" id="">
-                  <button class="btn bg-[#B4F461] mt-2">Donate Now</button>
-              </div>
-            </div>
+             </div>
           </div>
         </div>
       </section>
     </div>
+
+    <!-- script link -->
+     <script src="js/index.js"></script>
   </body>
 </html>
