donation and history section added successfully

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
         </nav>
         <div>
           <div class="w-10/12 h-auto mx-auto my-8 text-center">
-            <button class="btn bg-[#B4F461]">Donation</button>
-            <button class="btn ml-3">History</button>
+            <button id="donation-tab" class="btn bg-[#B4F461]">Donation</button>
+            <button id="history-tab" class="btn ml-3">History</button>
           </div>
         </div>
        </div>
       <!-- main section -->
-      <section class="z-10">
+      <section class="z-10" id="donate-card">
         <div class="w-10/12 h-auto mx-auto my-12">
           <div>
             <!-- card section -->
@@ -88,14 +88,17 @@
                 </div>
               </div>
             </div>
-            <!-- History section -->
-             <div>
-              <div>
-                
-              </div>
-             </div>
           </div>
         </div>
+      </section>
+      <section class="w-10/12 hidden h-auto mx-auto my-12" id="history-section">
+        <!-- History section -->
+        <div class="py-6 border border-solid mt-12 rounded-md">
+          <div class="p-4">
+            <h3>Donate for Flood Relief in Feni,Bangladesh</h3>
+            <span>Date : Tue Sep 17 2024 08:39:11 GMT +0600 (Bangladesh Standard Time)</span>
+          </div>
+         </div>
       </section>
     </div>
 
